property sonar.jdbc.url deleted